# datasoul

./: .gitignore  .gitmodules  .hgignore  Alerts.md  Backgrounds.md  Development.md  DownloadInstall.md  ExportPDF.md  Features_2_0.md  ImportEasyWorship.md  ImportOffice.md  MainWindowOverview.md  OfficePresentations.md  Overview.md  ProjectHome.md  PublishOnline.md  RemoteDisplay.md  Screenshots.md  VersionStamp.md  WhatsNew.md
Datasoul-Lite/: build.xml
Datasoul-Lite/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Datasoul-VLC/: build.xml
Datasoul-VLC/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
datasoul-src/: .cvsignore  build-before-profiler.xml  build-mac.xml  datasoul.icns  find-unused-i18n-strings.sh  find-unused-icons.sh
datasoul-src/nbproject/: build-impl.xml  project.properties
datasoul-src/packaging/: build-all.sh  build.xml  windows.nsi
datasoul-v1/: .cvsignore  build-before-profiler.xml  build.xml  find-unused-i18n-strings.sh  manifest.mf
datasoul-v1/backup/: ChordShapePanel.form  ChordsDB.java  ChordsManagerPanel.java  DatasoulMainForm.java  Song.java  SongFormatFrame.java  SongListTable.java  SongsPanel.form
datasoul-v1/config/: datasoul.chordsdb  datasoul.config  displayControl.config  sdlliverender.main.config  (+2 more)
datasoul-v1/src/native/linux/SDL_bgrab-1.0.0/: Makefile.am  Makefile.in  SDL_bgrab.c  SDL_bgrab.h  aclocal.m4  configure  configure.in  deinterlace.c  frequencies.c  mkinstalldirs  readme
packaging/: build-all.sh  project.properties  windows.nsi
(+617 files in other folders)
